--- a/momentum_index.html
+++ b/momentum_index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="momentum_index.css">
-    <title></title>
+    <title>momentum</title>
   </head>
   <body>
     <div class="js-clock">
